.metadata/.plugins/org.eclipse.cdt.ui/DisplacementMapper.build.log
04:36:41 **** Incremental Build of configuration Debug for project DisplacementMapper ****
make all 
Building file: ../main.cpp
Invoking: Cross G++ Compiler
g++ -I/usr/local/include/opencv -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.d" -o "main.o" "../main.cpp"
../main.cpp:365:2: warning: "/*" within comment [-Wcomment]
  /*
 ^
../main.cpp: In function ‘void initRendering()’:
../main.cpp:373:17: error: ‘endY’ was not declared in this scope
  angleParam = ((endY-startY)/(endX-startX));
                 ^
../main.cpp:373:22: error: ‘startY’ was not declared in this scope
  angleParam = ((endY-startY)/(endX-startX));
                      ^
../main.cpp:373:31: error: ‘endX’ was not declared in this scope
  angleParam = ((endY-startY)/(endX-startX));
                               ^
../main.cpp:373:36: error: ‘startX’ was not declared in this scope
  angleParam = ((endY-startY)/(endX-startX));
                                    ^
../main.cpp:375:9: error: return-statement with a value, in function returning 'void' [-fpermissive]
  return result;
         ^
../main.cpp: In function ‘void calculateWeightChange(cv::String, bool, double, double, double, double, double, double)’:
../main.cpp:447:71: error: ‘xYChangeToAngle’ was not declared in this scope
   double dispMChangeAngle = xYChangeToAngle(endY, startY, endX, startX);
                                                                       ^
../main.cpp:452:10: warning: unused variable ‘effectDistance’ [-Wunused-variable]
   double effectDistance = (endZ/startZ);// amount of depth change
          ^
../main.cpp:490:9: warning: unused variable ‘yTexScalingFactor’ [-Wunused-variable]
  double yTexScalingFactor = 2.62649350649;//-2.1484375;
         ^
../main.cpp:495:9: warning: unused variable ‘newTexY’ [-Wunused-variable]
  double newTexY;
         ^
../main.cpp: In function ‘void applyDispMap(double, double, double)’:
../main.cpp:559:8: warning: suggest parentheses around comparison in operand of ‘&’ [-Wparentheses]
  if (y > 0 & y < maxYSize-borderToCrop) {
        ^
../main.cpp:541:9: warning: unused variable ‘range’ [-Wunused-variable]
  double range = 20;
         ^
../main.cpp: In function ‘void createMeshOfRect()’:
../main.cpp:640:30: warning: suggest parentheses around comparison in operand of ‘&’ [-Wparentheses]
    if ((x < maxYSize/2) | (x < (maxYSize/2+(maxXSize-maxYSize)) & x > (maxXSize-maxYSize))) {
                              ^
../main.cpp:651:16: warning: suggest parentheses around comparison in operand of ‘&’ [-Wparentheses]
    else if ((x >= maxYSize/2 & x < maxYSize) | (x > (maxYSize/2+(maxXSize-maxYSize)) & x < (maxXSize))) {
                ^
../main.cpp:651:51: warning: suggest parentheses around comparison in operand of ‘&’ [-Wparentheses]
    else if ((x >= maxYSize/2 & x < maxYSize) | (x > (maxYSize/2+(maxXSize-maxYSize)) & x < (maxXSize))) {
                                                   ^
../main.cpp:662:15: warning: suggest parentheses around comparison in operand of ‘&’ [-Wparentheses]
    else if (x > (maxYSize) & x < (maxXSize-maxYSize)) {
               ^
../main.cpp:677:19: error: ‘createMesh’ was not declared in this scope
    createMesh(vAT3);
                   ^
../main.cpp: In function ‘void drawScene()’:
../main.cpp:726:39: error: ‘buildDispMap’ was not declared in this scope
  buildDispMap(startingDispMap, "start");
                                       ^
../main.cpp:730:19: error: ‘findAnchorPoints’ was not declared in this scope
  findAnchorPoints();
                   ^
../main.cpp:699:10: warning: unused variable ‘directedLight’ [-Wunused-variable]
  GLfloat directedLight[] = {200.7f, 200.7f, 200.7f, 1.0f};
          ^
../main.cpp:700:10: warning: unused variable ‘directedLightPos’ [-Wunused-variable]
  GLfloat directedLightPos[] = {-210.0f, 215.0f, 220.0f, 0.0f};
          ^
../main.cpp: In function ‘void update(int)’:
../main.cpp:752:55: warning: suggest parentheses around comparison in operand of ‘&’ [-Wparentheses]
   if ((dispMapChangeSine==1.0)&(dispMapFileCounter+1) < numberOfDispMaps) {
                                                       ^
../main.cpp:755:61: warning: suggest parentheses around comparison in operand of ‘&’ [-Wparentheses]
   else if ((dispMapChangeSine==-1.0)&(dispMapFileCounter-1) > -1.0) {
                                                             ^
../main.cpp: In function ‘int main(int, char**)’:
../main.cpp:871:15: error: ‘initWeights’ was not declared in this scope
   initWeights();
               ^
../main.cpp:878:19: error: ‘handleResize’ was not declared in this scope
   glutReshapeFunc(handleResize);
                   ^
make: *** [main.o] Error 1
subdir.mk:21: recipe for target 'main.o' failed

04:36:48 Build Finished (took 7s.448ms)

